# JNADemo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/newtrekwang/jnademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello.c
app/src/main/cpp/include/: hello.h
app/src/main/java/me/newtrekwang/jnademo/: MainActivity.java  MyApplication.java
app/src/main/java/me/newtrekwang/jnademo/utils/: Clibrary.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/newtrekwang/jnademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
