
# 设置Cmake的最低版本号
cmake_minimum_required(VERSION 3.6.0)

#############################################################引入头文件开始###############################################################################
# 引入opencv 头文件
set(headers ${CMAKE_SOURCE_DIR}/src/main/cpp/include)
include_directories(${headers})
#############################################################引入头文件结束###############################################################################


#############################################################引入链接库开始###############################################################################


#############################################################引入链接库结束###############################################################################

# 定义自己写的总库
add_library(hello

        SHARED

        ${CMAKE_SOURCE_DIR}/src/main/cpp/hello.c
        )

# 如果需要其他NDK原生库的话，可自行在此处添加
find_library(log-lib

             log)



# 将第三方库以及自己写的库关联到需要用的NDK原生库中
target_link_libraries(
        hello
        ${log-lib})